tests/negative/pkg_bad_path_part/other.toit
import pkg

identify:
  return pkg.identify
